# DistfilesCleaner

./: !cmake.sh  CMakeLists.txt  __main__.py  humansize.py
src/: main.cpp
